[package]
name = "genrex"
version = "0.1.0"
edition = "2024"
authors = ["erocs <github@erocs.org>"]
description = "Generate random strings matching a provided regular expression. AI Project"
license = "MIT"
repository = "https://github.com/erocs/genrex"

[lib]
name = "genrex"
path = "src/lib.rs"

[[bin]]
name = "genrex-cli"
path = "src/main.rs"

[dependencies]
rand = "0.8"
regex = "1"
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1.3"
